methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    for (stepper <-1 to 6){
    ^